--- a/package.json
+++ b/package.json
@@ -2,17 +2,31 @@
   "name": "desafio6",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "dev": "nodemon ./app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RafDes21/desafio6.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/RafDes21/desafio6/issues"
+  },
+  "homepage": "https://github.com/RafDes21/desafio6#readme",
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19",
-    "socket.io": "^4.5.1"
+    "knex": "^2.3.0",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "socket.io": "^4.5.2",
+    "sqlite3": "^5.0.11"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
